se corrigieron errores al crear el reporte

--- a/src/main/resources/pdfEjemplo.jrxml
+++ b/src/main/resources/pdfEjemplo.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Recibo" pageWidth="612" pageHeight="600" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.2100000000000004"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="211"/>
+	<property name="ireport.y" value="104"/>
 	<parameter name="id" class="java.lang.String"/>
 	<parameter name="p_ruta_img" class="java.lang.String"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
@@ -14,7 +14,7 @@
 	<queryString>
 		<![CDATA[select pago_folpago, pago_usuaid, pago_concepto, pago_foldescto, pago_montoapagar,
 pago_referencia, pago_fpago, pago_banco, pago_cnta_bancaria, pago_user, pago_fautoriza,
-pago_uautoriza, pago_polcont, pago_polpres, pago_estatus, usua_nombre, ures_descrip
+pago_uautoriza, pago_polcont, pago_polpres, pago_estatus, usua_nombre, ures_descrip,usua_persona
 from tesoportal.tpagosonline,tesoportal.tusuarios,finanzas.fures
 where pago_usuaid = usua_id
 and usua_ures=ures_ures
@@ -38,8 +38,9 @@ and pago_estatus = 'A']]>
 	<field name="PAGO_ESTATUS" class="java.lang.String"/>
 	<field name="USUA_NOMBRE" class="java.lang.String"/>
 	<field name="URES_DESCRIP" class="java.lang.String"/>
+	<field name="USUA_PERSONA" class="java.lang.String"/>
 	<pageHeader>
-		<band height="117" splitType="Stretch">
+		<band height="97" splitType="Stretch">
 			<staticText>
 				<reportElement x="107" y="37" width="309" height="36"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -78,36 +79,13 @@ and pago_estatus = 'A']]>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="422" splitType="Stretch">
-			<rectangle>
-				<reportElement mode="Opaque" x="0" y="0" width="572" height="421" forecolor="#FFFFFF" backcolor="#E2DBDB"/>
-			</rectangle>
+		<band height="171" splitType="Stretch">
 			<staticText>
 				<reportElement x="15" y="10" width="553" height="20"/>
 				<textElement verticalAlignment="Middle">
 					<font size="12" isBold="true" isUnderline="true"/>
 				</textElement>
 				<text><![CDATA[Descripción de Pago]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="461" y="361" width="100" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="12" isBold="true" isUnderline="true"/>
-				</textElement>
-				<text><![CDATA[Monto]]></text>
-			</staticText>
-			<line>
-				<reportElement x="0" y="421" width="572" height="1"/>
-				<graphicElement>
-					<pen lineStyle="Dashed"/>
-				</graphicElement>
-			</line>
-			<staticText>
-				<reportElement x="15" y="349" width="155" height="20"/>
-				<textElement verticalAlignment="Middle">
-					<font size="12" isBold="true" isUnderline="true"/>
-				</textElement>
-				<text><![CDATA[No. de recibo:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="15" y="118" width="116" height="20"/>
@@ -117,26 +95,12 @@ and pago_estatus = 'A']]>
 				<text><![CDATA[A nombre de]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="15" y="381" width="155" height="20"/>
-				<textElement verticalAlignment="Middle">
-					<font size="12" isBold="true" isUnderline="true"/>
-				</textElement>
-				<text><![CDATA[No. de autorización:]]></text>
-			</staticText>
-			<staticText>
 				<reportElement x="15" y="60" width="243" height="20"/>
 				<textElement verticalAlignment="Middle">
 					<font size="12" isBold="true" isUnderline="true"/>
 				</textElement>
 				<text><![CDATA[Unidad Responsable]]></text>
 			</staticText>
-			<textField pattern="¤ #,##0.00">
-				<reportElement x="461" y="381" width="100" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{PAGO_MONTOAPAGAR}]]></textFieldExpression>
-			</textField>
 			<textField>
 				<reportElement x="15" y="30" width="553" height="20"/>
 				<textElement verticalAlignment="Middle">
@@ -152,26 +116,94 @@ and pago_estatus = 'A']]>
 			<textField>
 				<reportElement x="15" y="138" width="557" height="20"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{USUA_NOMBRE}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{USUA_NOMBRE}+" ("+$F{USUA_PERSONA}+")"]]></textFieldExpression>
 			</textField>
+		</band>
+	</columnHeader>
+	<detail>
+		<band height="50">
 			<subreport>
-				<reportElement x="15" y="173" width="557" height="138"/>
+				<reportElement x="15" y="0" width="557" height="50"/>
 				<subreportParameter name="id">
 					<subreportParameterExpression><![CDATA[$P{id}]]></subreportParameterExpression>
 				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR2} + "pdfEjemplo_subreport2.jasper"]]></subreportExpression>
 			</subreport>
-			<textField isBlankWhenNull="true">
-				<reportElement x="170" y="349" width="213" height="20"/>
-				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$P{receipt}]]></textFieldExpression>
+		</band>
+	</detail>
+	<columnFooter>
+		<band height="133">
+			<staticText>
+				<reportElement x="15" y="38" width="155" height="20"/>
+				<textElement verticalAlignment="Middle">
+					<font size="12" isBold="true" isUnderline="true"/>
+				</textElement>
+				<text><![CDATA[No. de autorización:]]></text>
+			</staticText>
+			<textField pattern="¤ #,##0.00">
+				<reportElement mode="Opaque" x="461" y="38" width="100" height="20" backcolor="#CCCCCC"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{PAGO_MONTOAPAGAR}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="170" y="381" width="213" height="20"/>
+				<reportElement x="170" y="38" width="213" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{authorizationCode}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="15" y="58" width="155" height="20"/>
+				<textElement verticalAlignment="Middle">
+					<font size="12" isBold="true" isUnderline="true"/>
+				</textElement>
+				<text><![CDATA[Fecha de pago:]]></text>
+			</staticText>
+			<textField pattern="dd/MM/yyyy h.mm a" isBlankWhenNull="true">
+				<reportElement x="170" y="58" width="213" height="20"/>
+				<textElement verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{PAGO_FPAGO}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="461" y="18" width="100" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="12" isBold="true" isUnderline="true"/>
+				</textElement>
+				<text><![CDATA[Monto]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="15" y="18" width="155" height="20"/>
+				<textElement verticalAlignment="Middle">
+					<font size="12" isBold="true" isUnderline="true"/>
+				</textElement>
+				<text><![CDATA[No. de recibo:]]></text>
+			</staticText>
+			<textField isBlankWhenNull="true">
+				<reportElement x="170" y="18" width="213" height="20"/>
+				<textElement verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$P{receipt}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="0" y="8" width="572" height="1"/>
+				<graphicElement>
+					<pen lineStyle="Dashed"/>
+				</graphicElement>
+			</line>
+			<textField>
+				<reportElement x="379" y="122" width="174" height="11"/>
+				<textElement textAlignment="Right">
+					<font size="8" isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Página "+$V{PAGE_NUMBER}+" / "]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="553" y="122" width="24" height="11"/>
+				<textElement textAlignment="Left">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
 		</band>
-	</columnHeader>
+	</columnFooter>
 </jasperReport>
